5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1828_1640.log
== TEST (2019-06-12 14:17:52) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
for i in v:
	
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:25) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- ERROR:
File "XXXX", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:34) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- ERROR:
File "XXXX", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:37) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- ERROR:
File "XXXX", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:37) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- ERROR:
File "XXXX", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:38) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- ERROR:
File "XXXX", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:39:41) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- EXECUTION TIME:
1.42762
-- ERROR:
  File "/home/codebench/codes/1828/1640/main.py", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:39:42) 
-- CODE:
from numpy import*
v=array(eval(input("vetor de qt tem ímpa:")))
vb=zeros(v, dtype=int)
i=0
y=0 #variavel contadora para guardar a qtd de impares
impar=0
for i in v:
	vb=2%0=0
		impar= impar+1
print(v)
	
	
-- EXECUTION TIME:
1.9078
-- ERROR:
  File "/home/codebench/codes/1828/1640/main.py", line 9
    impar= impar+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
